--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  box-sizing: border-box;
 }
 .box-1 {
   background-color: aqua;
@@ -18,4 +19,33 @@ body {
   top: -50px;
   left: -20px;
   z-index: -1;
+}
+
+.box-3 {
+  background-color: blue;
+  color: antiquewhite;
+  margin: 0px;
+  padding: 10px;
+  position: relative;
+
+  max-width: 500px;
+  max-height: 500px;
+}
+
+.box-4 {
+  background-color: aqua;
+  color: black;
+  position: absolute;
+  /* bottom: -30%; */
+
+  top: 50%;
+  left: 50%;
+}
+
+.box-5 {
+  background-color: brown;
+  color: white;
+  margin: 0px;
+  padding: 20px;
+  max-width: 220px;
 }
